--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,6 +126,10 @@ body {
 }
 
 @layer base {
+  html,
+  body {
+    @apply overscroll-y-none;
+  }
   * {
     @apply border-border outline-ring/50;
   }
